# rusti-cal

./: .gitignore  Cargo.toml  LICENSE  README.md  bors.yaml
.github/workflows/: rust.yml
src/: accumulator.rs  calendar.rs  consts.rs  io.rs  lib.rs  locale.rs  main.rs
src/calendar/: consts.rs  io.rs
tests/: cli.rs
