[package]
name = "rusti-cal"
version = "0.4.1"
authors = ["Arthur Henrique <arthur393@gmail.com>"]
edition = "2018"
description = "⚡️ Lightning-fast and minimal calendar command line. It's similar to `cal`. Written in Rust 🦀"
readme = "README.md"
repository = "https://github.com/arthurhenrique/rusti-cal"
license-file = "LICENSE"
keywords = ["calendar", "cal"]
categories = ["command-line-utilities"]

[dependencies]
argh = "*"