[package]
name = "rusti-cal"
version = "1.1.0"
authors = ["Arthur Henrique <arthur393@gmail.com>"]
edition = "2018"
description = "⚡️ Lightning-fast and minimal calendar command line. It's similar to `cal`. Written in Rust 🦀"
readme = "README.md"
repository = "https://github.com/arthurhenrique/rusti-cal"
license-file = "LICENSE"
keywords = ["calendar", "cal"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.11"
chrono = "0.4"
locale_config = "0.3.0"
pure-rust-locales = "0.6.0"
ansi_term = "0.12.1"
