[package]
name = "rusti-cal"
version = "1.1.0"
authors = ["Arthur Henrique <arthur393@gmail.com>"]
edition = "2018"
description = "⚡️ Lightning-fast and minimal calendar command line. It's similar to `cal`. Written in Rust 🦀"
readme = "README.md"
repository = "https://github.com/arthurhenrique/rusti-cal"
license-file = "LICENSE"
keywords = ["calendar", "cal"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.12"
chrono = "0.4"
locale_config = "0.3.0"
pure-rust-locales = "0.8.1"
ansi_term = "0.12.1"
unicode-width = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
